Prevent tab focus moved onto invisible button labels.

When unified system tray is initially collapsed, button labels are
unseen. However those views were updated reflecting collapse state
right after opening the tray.

Test: manually verified
Bug: 859033
Change-Id: I7a2c09e0e454b324476451b216e6d553524273c7
Reviewed-on: https://chromium-review.googlesource.com/1128697
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573660}
Former-commit-id: 567b283b8e2300c28ee39d1db257c5b8cec82edc